Fixed left and right containers to have same height with no scrollbar

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
 
 body {
     min-height: 100vh;
+    /* overflow-y: auto; */
 }
 
 .card__container { 
@@ -21,7 +22,7 @@ body {
 
 .card-img { 
     position: absolute;
-    min-height: 100vh;
+    height: 100vh;
     width: 35%;
     z-index: -1;
     transition: opacity ease-out 250ms;
